Add ton of shits

--- a/.env.dist
+++ b/.env.dist
@@ -6,3 +6,9 @@ BOT_COMMAND_PREFIX=!
 
 # Owner with every rights
 BOT_OWNER=
+
+# Temporary parameter
+GUILD_ID=
+
+# Temporary parameter
+CHANNEL_ID=
