--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node $NODE_DEBUG_OPTION src/app.ts",
+    "start": "ts-node src/app.ts",
+    "dev": "nodemon",
     "build": "tsc"
   },
   "dependencies": {
@@ -19,6 +20,7 @@
     "@types/node": "^10.5.5",
     "husky": "^1.0.0-rc.13",
     "lint-staged": "^7.2.0",
+    "nodemon": "^1.18.9",
     "prettier": "^1.14.0",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
